<resources>
    <string name="app_name">RepORT</string>
    <string name="username">Ingrese usuario...</string>
    <string name="password">Ingrese contraseña...</string>
    <string name="button_ingresar">Ingresar</string>
    <string name="icon_home">Home</string>
    <string name="icon_settings">Settings</string>
    <string name="settings_navbar">Navigation Bar</string>
    <string name="settings_navbar_color">Color</string>
    <string name="new_theme">Nuevo Tema</string>
    <string name="name_theme">Titulo</string>
    <string name="description_theme">Descripción</string>
    <string name="agregar_theme">Crear Tema</string>
    <string name="cancelar_theme">Cancelar</string>
    <string name="tipo_theme">Tipo</string>
    <string name="new_comment">Nuevo Comentario</string>
    <string name="submit_comment">Comentar</string>
    <string name="registrate">¿No tenes una cuenta?</string>
    <string name="button_register">Registrate!</string>
    <string name="titulo_registro">Registrate</string>
    <string name="nombreTxt">Nombre</string>
    <string name="nombreInputTxt">Ingrese su nombre</string>
    <string name="apellidoTxt">Apellido</string>
    <string name="apellidoInputTxt">Ingrese su apellido</string>
    <string name="emailTxt">E-mail / Usuario</string>
    <string name="emailInputTxt">Ingrese su e-mail</string>
    <string name="passwordTxt">Contraseña</string>
    <string name="passwordInputTxt1">Ingrese su nueva contraseña</string>
    <string name="passwordInputTxt2">Ingrese nuevamente su contraseña</string>
    <string name="perfil">Perfil</string>
    <string name="nueva_contrasenia">Cambiar Contraseña</string>
    <string name="botton_cambio_contrasenia">Modificar Contraseña</string>
    <string name="contrasenia_actual">Ingrese su contraseña actual</string>
    <string name="button_logout">Cerrar Sesion</string>
    <string-array name="color_values">
        <item>Gray</item>
        <item>Blue</item>
    </string-array>
    <string name="pestania_tema">Tema</string>
    <string name="pestania_comentar">Comentarios</string>
    <string name="settings_navbar_summary">Choose your favorite color</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>