<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".fragments.Register">

    <TextView
        android:id="@+id/nombreProfile"
        android:layout_width="128dp"
        android:layout_height="33dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="260dp"
        android:layout_marginBottom="12dp"
        android:text="@string/nombreTxt"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/nombreInputTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloProfile" />

    <EditText
        android:id="@+id/nombreInputTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/nombreInputTxt"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/apellidoProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreProfile" />

    <EditText
        android:id="@+id/passwordInputProfile1"
        android:layout_width="301dp"
        android:layout_height="41dp"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="87dp"
        android:ems="10"
        android:hint="@string/passwordInputTxt1"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputProfile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordProfile" />

    <EditText
        android:id="@+id/passwordInputProfile2"
        android:layout_width="360dp"
        android:layout_height="42dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="42dp"
        android:ems="10"
        android:hint="@string/passwordInputTxt2"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/buttonCambio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputProfile1" />

    <EditText
        android:id="@+id/apellidoInputTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="7dp"
        android:ems="10"
        android:hint="@string/apellidoInputTxt"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/emailProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoProfile" />

    <EditText
        android:id="@+id/emailInputTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/emailInputTxt"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/passwordProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailProfile" />

    <TextView
        android:id="@+id/apellidoProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="313dp"
        android:layout_marginBottom="6dp"
        android:text="@string/apellidoTxt"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/apellidoInputTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombreInputTxt" />

    <TextView
        android:id="@+id/emailProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="13dp"
        android:text="@string/emailTxt"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailInputTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoInputTxt" />

    <TextView
        android:id="@+id/passwordProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="281dp"
        android:text="@string/passwordTxt"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputProfile1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailInputTxt" />

    <Button
        android:id="@+id/buttonCambio"
        android:layout_width="157dp"
        android:layout_height="47dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="124dp"
        android:layout_marginBottom="63dp"
        android:text="@string/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputProfile2" />

    <TextView
        android:id="@+id/tituloProfile"
        android:layout_width="290dp"
        android:layout_height="73dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="9dp"
        android:text="@string/titulo_registro"
        android:textAlignment="center"
        android:textColor="#031F5A"
        android:textSize="22pt"
        app:layout_constraintBottom_toTopOf="@+id/nombreProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>