<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Profile">

    <TextView
        android:id="@+id/emailProfile"
        android:layout_width="319dp"
        android:layout_height="40dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="30dp"
        android:text="@string/emailTxt"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="12pt"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/passwordProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloProfile" />

    <TextView
        android:id="@+id/passwordProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="162dp"
        android:text="@string/nueva_contrasenia"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="10pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputActual"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailProfile" />

    <EditText
        android:id="@+id/passwordInputProfile1"
        android:layout_width="341dp"
        android:layout_height="71dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="47dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:hint="@string/passwordInputTxt1"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputProfile2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputActual" />

    <EditText
        android:id="@+id/passwordInputActual"
        android:layout_width="340dp"
        android:layout_height="65dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:hint="@string/contrasenia_actual"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/passwordInputProfile1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.272"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordProfile" />

    <EditText
        android:id="@+id/passwordInputProfile2"
        android:layout_width="341dp"
        android:layout_height="67dp"
        android:layout_marginStart="37dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="20dp"
        android:ems="10"
        android:hint="@string/passwordInputTxt2"
        android:inputType="textPersonName"
        android:password="true"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="9pt"
        app:layout_constraintBottom_toTopOf="@+id/buttonCambio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputProfile1" />

    <Button
        android:id="@+id/buttonCambio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="4dp"
        android:text="@string/botton_cambio_contrasenia"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputProfile2" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="60dp"
        android:text="@string/button_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCambio" />

    <TextView
        android:id="@+id/tituloProfile"
        android:layout_width="256dp"
        android:layout_height="68dp"
        android:layout_marginStart="78dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="40dp"
        android:text="@string/perfil"
        android:textAlignment="center"
        android:textColor="#031F5A"
        android:textColorHint="@color/black"
        android:textSize="22pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/emailProfile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>